--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+/* If you have the font files and want to embed them */
+/* @font-face {
+      font-family: 'Segoe UI';
+      src: url('/fonts/SegoeUI.woff2') format('woff2');
+      font-weight: 400;
+      font-style: normal;
+    } */
+
+* {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
